Update 2015-05-12-Java Code Analyzer - SONAR.md